<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activitySettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/colorBackground"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/c_tools"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_switcher"
        style="@style/SettingsItem"
        android:text="@string/c_theme_dark"
        android:theme="@style/DarkThemeSwitchTheme" />

    <TextView
        android:id="@+id/share_app"
        style="@style/SettingsItem"
        android:text="@string/c_share"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/write_support"
        style="@style/SettingsItem"
        android:text="@string/c_w_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/terms_of_use"
        style="@style/SettingsItem"
        android:text="@string/c_lic"
        app:drawableEndCompat="@drawable/ic_arrow_right" />
</LinearLayout>